--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nrwl/linter": "12.3.5",
     "@nrwl/tao": "12.3.5",
     "@nrwl/workspace": "12.3.5",
+    "@nx-plus/docusaurus": "^12.0.0",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
