--- a/package.json
+++ b/package.json
@@ -73,8 +73,10 @@
     "jest": "26.2.2",
     "jest-preset-angular": "8.4.0",
     "prettier": "2.2.1",
+    "terser": "^5.7.0",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.2.4"
+    "typescript": "~4.2.4",
+    "url-loader": "^4.1.1"
   }
 }
