--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular-eslint/template-parser": "~12.0.0",
     "@angular/compiler-cli": "12.0.0",
     "@angular/language-service": "12.0.0",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
     "@nrwl/cli": "12.3.5",
     "@nrwl/cypress": "12.3.5",
     "@nrwl/eslint-plugin-nx": "12.3.5",
@@ -62,8 +63,12 @@
     "@nrwl/tao": "12.3.5",
     "@nrwl/workspace": "12.3.5",
     "@nx-plus/docusaurus": "^12.0.0",
+    "@tsconfig/docusaurus": "^1.0.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/react": "^17.0.9",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "cypress": "^7.3.0",
