--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "cypress": "^7.3.0",
+    "docusaurus-plugin-typedoc": "^0.14.2",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
@@ -75,6 +76,8 @@
     "prettier": "2.2.1",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
+    "typedoc": "^0.20.36",
+    "typedoc-plugin-markdown": "^3.9.0",
     "typescript": "~4.2.4",
     "url-loader": "^4.1.1"
   }
