--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@angular/compiler-cli": "12.0.0",
     "@angular/language-service": "12.0.0",
     "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
+    "@docusaurus/theme-common": "^2.0.0-beta.0",
     "@nrwl/cli": "12.3.5",
     "@nrwl/cypress": "12.3.5",
     "@nrwl/eslint-plugin-nx": "12.3.5",
@@ -78,6 +79,7 @@
     "jest": "26.2.2",
     "jest-preset-angular": "8.4.0",
     "prettier": "2.2.1",
+    "terser": "^5.7.0",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4",
