--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "jest": "26.2.2",
     "jest-preset-angular": "8.4.0",
     "prettier": "2.2.1",
+    "terser": "5.7.0",
     "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4",
